--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api "cn.aigestudio.wheelpicker:WheelPicker:1.0.3"
+//    api "cn.aigestudio.wheelpicker:WheelPicker:1.0.3"
+    compile ":WheelPicker"
     api 'com.facebook.react:react-native:+'
 }
