--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    api "cn.aigestudio.wheelpicker:WheelPicker:1.0.3"
-    implementation(name:'WheelPicker', ext:'aar')
+    api "cn.hellcwu.wheelpicker:WheelPicker:1.0.3"
     api 'com.facebook.react:react-native:+'
 }
