【rn_0.59】[UP] 回滚去掉加粗代码

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api "cn.hellcwu.wheelpicker:WheelPicker:1.0.3"
+    api "cn.aigestudio.wheelpicker:WheelPicker:1.0.3"
     api 'com.facebook.react:react-native:+'
 }
